--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "~3.6.5",
+    "flush-promises": "^1.0.2",
     "vue": "~2.6.12",
     "vue-router": "~3.4.7",
     "vuetify": "~2.3.15",
